# skymeet-clients

./: CMakeLists.txt  README.md  qml.qrc  skymeet_qml_client_qt515.pro
qml/: Main.qml
qml/pages/: StreamsPage.qml
src/: ApiClient.cpp  ApiClient.h  EventSocket.cpp  EventSocket.h  main.cpp
